fixed spacing again

--- a/main.css
+++ b/main.css
@@ -71,6 +71,7 @@ li {
   flex:1;
   flex-wrap:wrap;
   flex-direction: column;
+  align-content: center;
 }
 .card {
   width: 100%
